--- a/package.json
+++ b/package.json
@@ -11,15 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.12",
+    "@angular/animations": "^9.1.13",
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
     "@angular/core": "~9.1.12",
     "@angular/forms": "~9.1.12",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "angular-in-memory-web-api": "^0.6.1",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^2.7.3",
+    "currency-formatter": "^1.5.9",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "ngx-mask": "^12.0.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^11.4.2",
     "rxjs": "~6.5.4",
+    "toastr": "^2.1.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
